--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                 padding: 0;
                 height: 100%;
                 overflow: hidden;
-                background-color: #BA10B0;
+                background-color: black;
             }
         </style>
         <!-- confs -->
